# catscii

./: .envrc  Cargo.toml  Dockerfile
.cargo/: config.toml
src/: main.rs
