[package]
name = "catscii"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
artem = { version = "1", default-features = false }
axum = "0.6.12"
color-eyre = "0.6.2"
image = "0.24.6"
opentelemetry = { version = "0.19.0", features = ["rt-tokio"] }
opentelemetry-honeycomb = { git = "https://github.com/fasterthanlime/opentelemetry-honeycomb-rs", branch = "simplified", version = "0.1.0" }
pretty-hex = "0.3.0"
reqwest = { version = "0.11.16", features = ["json"] }
sentry = "0.30.0"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["json"] }
