[package]
name = "catscii"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
artem = { version = "2.0.0", default-features = false }
axum = "0.6.20"
color-eyre = "0.6.2"
image = "0.24.7"
pretty-hex = "0.3.0"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.183", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
